Revision history for Perl module CommonMark

0.180300  ?
    - Require libcmark 0.18.3

0.1802  2015-03-16
    - Fix build with Perl <= 5.14.
    - Test with Travis CI.

0.1801  2015-03-11
    - Fix Parser->new to work correctly with libcmark 0.18.
      Also fixes compilation with libcmark 0.18.1.

0.1800  2015-03-05
    - Adjust to API changes in libcmark 0.18.
    - Require libcmark 0.18.
    - Add "parse" convenience function.
    - Fix build with old EUMM versions.

0.1700  2015-02-04
    - Check for libcmark with Devel::CheckLib.
    - Accessors for libcmark version.
    - Require libcmark 0.16.
    - Improve and fix documentation.

0.1601  2015-01-22
    - Initial release.
